--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
-name: John Doe
-bio: 'A Man who travels the world eating noodles'
+name: Carlos Alberto
+bio: 'Born in Puerto Rico. Frozen and packaged in New England'
 
 # if it's an external image, update below for true
 external-image: false
