--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # main text of home
-name: Carlos Alberto
-bio: 'Born in Puerto Rico. Frozen and packaged in New England'
+name: John Doe
+bio: 'A Man who travels the world eating noodles'
 
 # if it's an external image, update below for true
 external-image: false
 picture: 'assets/images/profile.jpg'
 
-url: http://caalbert.github.io
+url: http://koppl.in/indigo
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
@@ -26,16 +26,16 @@ disqus: mydisqus
 
 # if you don't have any of social below, comment the line
 facebook: myfacebook
-twitter: @cortiztoro
+twitter: mytwitter
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
 # linkedin: mylinkedin
-# youtube: myyoutube
-# spotify: myspotify
-github: caalbert
-# medium: medium
-email: entrevision.caortiz@gmail.com
+youtube: myyoutube
+spotify: myspotify
+github: mygithub
+medium: medium
+email: myemail@gmail.com
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
