--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ bio: 'Born in Puerto Rico. Made a popsicle in New England.'
 external-image: false
 picture: 'assets/images/profile.jpg'
 
-url: http://koppl.in/indigo
+url: http://caalbert.github.io
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
@@ -26,7 +26,7 @@ disqus: mydisqus
 
 # if you don't have any of social below, comment the line
 facebook: myfacebook
-twitter: mytwitter
+twitter: @cortiztoro
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
