Removed url in config

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ bio: 'Born in Puerto Rico. Made a popsicle in New England.'
 external-image: false
 picture: 'assets/images/profile.jpg'
 
-url: http://caalbert.github.io
+url: http://koppl.in/indigo
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
