--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ disqus: mydisqus
 
 # if you don't have any of social below, comment the line
 facebook: myfacebook
-twitter: @cortiztoro
+twitter: cortiztoro
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
