Gemfile changes and config content update
Local serve is still not working. Issue open with SSL3. Rubyinstaller
needs to fix SSL certificates.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Carlos Alberto
-bio: 'Born in Puerto Rico. Made a popsicle in New England.'
+bio: 'Born in the Caribbean. Made a popsicle in New England.'
 
 # if it's an external image, update below for true
 external-image: false
