Config data update

--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ highlighter: rouge
 disqus: mydisqus
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
+facebook: caortiztoro
 twitter: cortiztoro
-# google: mygoogle
+google: +CarlosOrtizCWL
 # instagram: myinstagram
 # pinterest: mypinterest
 # linkedin: mylinkedin
