--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ disqus: mydisqus
 # if you don't have any of social below, comment the line
 facebook: caortiztoro
 twitter: cortiztoro
-google: +CarlosOrtizCWL
+google: CarlosOrtizCWL
 # instagram: myinstagram
 # pinterest: mypinterest
 # linkedin: mylinkedin
